2002-04-18  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-man.c (yelp_man_populate_tree_for_subdir): set the uri
	  for man-pages to be man:name.section instead of full path. Seems 
	  to work much much better this way.

	* src/yelp-html.c: 
	- removed is_doc from read_data-struct, not used anymore
	- Don't use the GnomeVFS module, instead call the external
	  programs directly with g_spawn.
	(yelp_html_do_non_docbook): removed, replaced by do_maninfo.
	(yelp_html_do_maninf): added. This will soon be rewritten to use
	  g_spawn_async_with_pipes.
	

2002-04-16  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2002-04-15  Mikael Hallendal  <micke@codefactory.se>

	* configure.in: bumped version to 0.6.99

	* Release 0.6

	* configure.in: bumped version to 0.6

	* src/yelp-window.c: fixed a couple of warnings.
	(yw_handle_url): send the error correctly to gnome_url_show,
	  thanks rhult :)

	* configure.in: bumped gtkhtml2 requirements.

	* src/yelp-html.c (yelp_html_do_non_docbook): 
	- show error dialog if open fails.

	* src/yelp-error.h (YELP_ERROR): added error for non-docbook
	  documents.

	* src/yelp-db2html.c (yelp_db2html_convert): use stylesheet from
	  stylesheets/.
	(yelp_db2html_convert): updated to reflect changes in the
	  stylesheet.

	* stylesheets/*: Added, includs patch from sander to
	  gnome-doc-list.
	
	* configure.in (AC_OUTPUT): added stylesheets/Makefile.

	* Makefile.am (SUBDIRS): added stylesheets

2002-04-14  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: pretty-fied the sub-pages too.

	* src/yelp-window.c (yw_handle_url): pass the error to
	  gnome_url_show.

	* src/yelp-db2html.c (yelp_db2html_convert): better
	  error-handling.

	* src/yelp-html.c:
	(yelp_html_idle_read_end): don't free the handle twice.
	(yelp_html_idle_read_end): reset pointer to normal.
	(yelp_html_open_uri): set cursor to watch.

	* src/yelp-window.c (yw_handle_url): If error is set during